assets/k8s/hw-88/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment

  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
