assets/k8s/hw-88/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
