assets/k8s/hw-88/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
